# twoyi

./: .gitignore  .gitmodules  BUILD_SETUP.md  CHANGES.md  CHANGES_SUMMARY.md  DEBUG_RENDERER_TESTING.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  JNI_VERIFICATION.md  LOADER_NEW.md  OPENGLRENDER_IMPLEMENTATION.md  OPENGL_IMPLEMENTATION.md  OPENGL_RENDERER.md  OPENGL_RENDERER_NEW.md  OPEN_SOURCE_LIBRARIES.md  PIE_IMPLEMENTATION.md  QEMU_PIPE_IMPLEMENTATION.md  QEMU_PIPE_SUMMARY.md  QUICK_START.md  README.md  README_CN.md  REDROID_TESTING.md  RENDERER_SELECTION.md  SHELL_EXECUTION.md  TESTING_DIRECT_INVOCATION.md  basic.txt  build.gradle  global_last_kmsg.txt  logcat.txt  proc.txt  test_libtwoyi.sh  test_redroid.sh
.github/: CI_BUILD.md  copilot-instructions.md
.github/workflows/: android.yml  build-foss-renderer.yml  build-rom.yml  build.yml
app/: .gitignore  build.gradle
app/native/openglrender/: CMakeLists.txt  README.md
app/native/openglrender/include/: openglrender.h  pipe_connection.h  renderer.h
app/native/openglrender/src/: openglrender.cpp  pipe_connection.cpp  renderer.cpp
app/rs/: Cargo.toml  README.md  build.rs  build_rs.sh  linker_script.ld
app/rs/.cargo/: config.toml
app/rs/loader/: .gitignore  Cargo.toml  README.md  build.rs  build.sh
app/rs/loader/src/: lib.rs
app/rs/openglrenderer/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  libOpenglRender.map
app/rs/openglrenderer/src/: gralloc.rs  lib.rs  opengles.rs
app/rs/src/: cli.rs  core.rs  framebuffer.rs  input.rs  interp.c  lib.rs  main.rs  opengl_renderer.rs  openglrenderer_ffi.rs  openglrenderer_wrapper.c  qemu_pipe.rs  renderer_bindings.rs  renderer_loader.rs  server.rs  server_jni.rs
app/rs/src/renderer_new/: gralloc.rs  mod.rs  opengles.rs  pipe.rs  socket_monitor.rs
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  build_foss_renderer.sh  renderer_wrapper.cpp
app/src/main/cpp/anbox/: Android.mk  CMakeLists.txt  README.md
app/src/main/cpp/anbox/android/: anboxd.rc
app/src/main/cpp/anbox/android/wifi_hal/: Android.mk  info.cpp  info.h  interface.cpp  interface.h
app/src/main/cpp/anbox/products/: anbox.mk  anbox.xml  anbox_arm64.mk
app/src/main/cpp/anbox/products/arm64/: BoardConfig.mk
app/src/main/cpp/anbox/scripts/: run.sh
app/src/main/cpp/anbox/src/: CMakeLists.txt
app/src/main/cpp/anbox/src/ananbox/: main.cpp
app/src/main/cpp/anbox/src/anbox/: logger.cpp
app/src/main/cpp/anbox/src/anbox/graphics/: gl_renderer_server.cpp  layer_composer.cpp  layer_composer.h  program_family.cpp
app/src/main/cpp/anbox/src/anbox/graphics/emugl/: ColorBuffer.cpp  ColorBuffer.h  DispatchTables.h  DisplayManager.cpp  DisplayManager.h  RenderApi.cpp  RenderContext.cpp  RenderControl.cpp  RenderControl.h  Renderer.cpp  Renderer.h  RendererConfig.cpp  TextureDraw.cpp  TextureResize.cpp  WindowSurface.cpp
app/src/main/cpp/anbox/src/anbox/input/: device.cpp  manager.cpp  manager.h
app/src/main/cpp/anbox/src/anbox/network/: connections.h  published_socket_connector.cpp
app/src/main/cpp/anbox/src/anbox/qemu/: boot_properties_message_processor.cpp  pipe_connection_creator.cpp  pipe_connection_creator.h  sensors_message_processor.h
app/src/main/cpp/anbox/src/anbox/rpc/: connection_creator.cpp
app/src/main/cpp/opengl_render/: CMakeLists.txt  OpenglRender.cpp  OpenglRender.h  README.md
app/src/main/java/io/twoyi/: NativeServer.java  RemoteRenderActivity.java  Render2Activity.java  Renderer.java  ScrcpyRenderActivity.java  Twoyi.java
app/src/main/java/io/twoyi/ui/: AboutActivity.java  ProfileEditActivity.java  ProfileListActivity.java  ServerConsoleActivity.java  SettingsActivity.java
app/src/main/java/io/twoyi/utils/: AppKV.java  Installer.java  LogEvents.java  Profile.java  ProfileManager.java  ProfileSettings.java  RomManager.java  RomPatcher.java  ScrcpyClient.java  ServerManager.java  UIHelper.java
app/src/main/res/layout/: activity_profile_edit.xml  activity_profile_list.xml  item_profile.xml
app/src/main/res/menu/: menu_profile_edit.xml  menu_profile_item.xml  menu_profile_list.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: pref_settings.xml
app/src/test/java/io/twoyi/utils/: ProfileTest.java
docs/: BUILD_FOSS_RENDERER.md  FOSS_RENDERER_SUMMARY.md  QUICK_START_FOSS_RENDERER.md  RENDERER_SOURCES.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_rom.sh  prepare_rom.sh
server/: Cargo.toml  README.md  build_android.sh
server/.cargo/: config.toml
server/src/: cli.rs  framebuffer.rs  gralloc.rs  input.rs  jni_bindings.rs  lib.rs  main.rs  protocol.rs  renderer.rs  rom_patcher.rs  server.rs
tombstones/: tombstone_00  tombstone_01  tombstone_02  tombstone_03  tombstone_04  tombstone_05  tombstone_06  tombstone_07
