[package]
name = "twoyi-server"
version = "0.1.0"
edition = "2021"
description = "Standalone server for twoyi container management"

[[bin]]
name = "twoyi-server"
path = "src/main.rs"

[dependencies]
libc = "0.2"
once_cell = "1.9.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# for input system
uinput-sys = "0.1.7"
unix_socket = "0.5.0"

# for rootfs extraction
sevenz-rust = "0.6"

[patch.crates-io]
uinput-sys = { git = 'https://github.com/tiann/rust-uinput-sys' }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
