# Copyright Disclaimer: AI-Generated Content
# This file was created by GitHub Copilot, an AI coding assistant.
# AI-generated content is not subject to copyright protection and is provided
# without any warranty, express or implied, including warranties of merchantability,
# fitness for a particular purpose, or non-infringement.
# Use at your own risk.

[package]
name = "openglrenderer"
version = "1.0.0"
edition = "2021"
description = "Open-source OpenGL renderer library - complete replacement for legacy libOpenglRender.so"
license = "MPL-2.0"

[lib]
name = "OpenglRender"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.14"
once_cell = "1.9.0"
libc = "0.2.112"
ndk = "0.6.0"
ndk-sys = "0.3.0"

[build-dependencies]
cc = "1.0"
